[Feature] Finalize data analysis, create bag of words and sequences, and initialize word embedding process.

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -47,9 +47,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca0e24c8",
+   "metadata": {},
+   "source": [
+    "Set the seeder to have as stable random operations as possible"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3cb5b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 123\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
+    "tf.random.set_seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2010727",
+   "metadata": {},
+   "source": [
+    "Read data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fbf099bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow_data = pd.read_csv('bow_data.csv') # bow\n",
+    "sequences_data = pd.read_csv('sequences_data.csv') # sequences of tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a021b7be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       Vulnerability       Category  Length\n",
+      "0              f\"str$id\"\"str$id\"\"str$id\"         ...  sql_injection       9\n",
+      "1      client.listentcp()    proxy = proxy(proxy_...           xsrf       8\n",
+      "2  from django.http import httpresponse, httpresp...  open_redirect       9\n",
+      "3  def write_preset(conn, queryin, descriptin):\\t...  sql_injection     175\n",
+      "4                          update_query = self.up...  sql_injection      14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sequences_data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0984d18f",
+   "metadata": {},
+   "source": [
+    "Word Embedding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f4acbd1",
+   "metadata": {},
+   "source": [
+    "Word2Vec - load pre-trained word2vec embeddings - NL knowledge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6946ea35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1da388",
+   "metadata": {},
+   "source": [
+    "Use corpus to train word2vec vectors on python source code - PL knowledge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f22d35f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb41a30e",
+   "metadata": {},
+   "source": [
+    "CodeBERT - load pre-trained codebert embeddings - PL knowledge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be0cc47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c271ce97",
+   "metadata": {},
+   "source": [
+    "RNN model, LSTM specifically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7222be80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f8f9769",
+   "metadata": {},
+   "source": [
+    "CNN model 1-d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "688dbee5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baa5a91a",
+   "metadata": {},
+   "source": [
+    "Pre-trained CodeBERT model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d13eeb05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acab4fc2",
+   "metadata": {},
+   "source": [
+    "Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0f83dca",
    "metadata": {},
    "outputs": [],
    "source": []
