--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -387,39 +387,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences = [tokenizer(sente, return_tensors=\"tf\", padding=True, truncation=True, add_special_tokens=False) for sente in sequences_data[\"Vulnerability\"]]\n"
+    "sequences = [tokenizer(sente, return_tensors=\"tf\", truncation=True, add_special_tokens=False) for sente in sequences_data[\"Vulnerability\"]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "bd9aa0f9",
+   "execution_count": 27,
+   "id": "ebe61f4b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ilias\\AppData\\Local\\Temp\\ipykernel_9464\\1520574951.py:14: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  lines_pad = np.array(extractEmbList(sequences))\n"
+     "ename": "NameError",
+     "evalue": "name 'sequences' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23892\\3880410877.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mlines_pad\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mlines_pad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextractEmbList\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msequences\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_length\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sequences' is not defined"
      ]
     }
    ],
    "source": [
-    "def extractEmbList(sequences):\n",
+    "def extractEmbList(sequences, max_len):\n",
     "    lines_pad = []\n",
     "    for sequence in sequences:\n",
     "        seq = sequence['input_ids'].numpy()[0]\n",
-    "#         if len(seq) < max_len:\n",
-    "#             for i in range(len(seq), max_len):\n",
-    "#                 seq = np.append(seq, 0)\n",
+    "        len_seq = len(seq)\n",
+    "        if len_seq < max_len:\n",
+    "            for i in range(len_seq, max_len):\n",
+    "                seq = np.append(seq, 0)\n",
     "        lines_pad.append(seq)\n",
     "    \n",
-    "    [arr.tolist() for arr in lines_pad]\n",
+    "    lines_pad = [arr.tolist() for arr in lines_pad]\n",
     "    \n",
     "    return lines_pad\n",
     "\n",
-    "lines_pad = np.array(extractEmbList(sequences))"
+    "lines_pad = np.array(extractEmbList(sequences, max_length))"
    ]
   },
   {
@@ -769,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
