Compute the length-number of words per code snippet and print the maximum

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -79,6 +79,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "14655bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "392"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(sequences_data[\"Length\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a701ad2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_counts = Vulnerability.apply(lambda x: len(x.split()))\n",
+    "max_word_count = word_counts.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "a021b7be",
    "metadata": {},
@@ -393,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ebe61f4b",
+   "id": "39f89891",
    "metadata": {},
    "outputs": [
     {
