Print max length

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "14655bee",
+   "id": "76e46cb0",
    "metadata": {},
    "outputs": [
     {
@@ -100,24 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a701ad2f",
+   "execution_count": 35,
+   "id": "48846336",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum number of words: 392\n"
+     ]
     }
    ],
    "source": [
-    "word_counts = Vulnerability.apply(lambda x: len(x.split()))\n",
-    "max_word_count = word_counts.max()"
+    "word_counts = sequences_data[\"Vulnerability\"].apply(lambda x: len(x.split()))\n",
+    "max_word_count = word_counts.max()\n",
+    "print(\"Maximum number of words:\", max_word_count)\n"
    ]
   },
   {
@@ -436,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "39f89891",
+   "id": "f5d02cb7",
    "metadata": {},
    "outputs": [
     {
