[BugFix] Fix bug in passing lines_pad to dataframe column

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -863,21 +863,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences = [tokenizer.encode(sente, padding=True, truncation=True, add_special_tokens=False, return_tensors=\"tf\").numpy() for sente in sequences_data[\"Vulnerability\"]] # Tokenize the complete sentences\n",
-    "\n",
-    "lines_pad = []\n",
-    "for seq in sequences:\n",
-    "    lines_pad.append(seq[0])"
+    "sentences = sequences_data[\"Vulnerability\"].tolist()\n",
+    "sequences = [tokenizer.encode(sente, padding=True, truncation=True, add_special_tokens=False, return_tensors=\"tf\").numpy() for sente in sentences] # Tokenize the complete sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7e1621e7",
+   "execution_count": null,
+   "id": "c6bb577b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences_data[\"bert\"] = lines_pad"
+    "lines_pad_bert = []\n",
+    "for seq in sequences:\n",
+    "    lines_pad_bert.append(seq[0])\n",
+    "    \n",
+    "lines_pad_bert = pad_sequences(lines_pad_bert, padding = 'post', maxlen = 512)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae3e724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines_pad_bert"
    ]
   },
   {
@@ -942,7 +953,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences = [tokenizer(sente, return_tensors=\"tf\", truncation=True, add_special_tokens=False) for sente in sequences_data[\"Vulnerability\"]]\n"
+    "sentences = sequences_data[\"Vulnerability\"].tolist()\n",
+    "sequences = [tokenizer(sente, return_tensors=\"tf\", truncation=True, add_special_tokens=False) for sente in sentences]"
    ]
   },
   {
@@ -960,11 +972,7 @@
     "            for i in range(len(seq), max_len):\n",
     "                seq = np.append(seq, 0)\n",
     "        lines_pad.append(seq)\n",
-    "    return lines_pad\n",
-    "\n",
-    "lines_pad = padSequences(sequences, 512)\n",
-    "lines_pad = [arr.tolist() for arr in lines_pad]\n",
-    "lines_pad = np.array(lines_pad)"
+    "    return lines_pad\n"
    ]
   },
   {
@@ -1005,31 +1013,9 @@
     }
    ],
    "source": [
-    "sequences_data[\"codebert\"] = lines_pad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "15a8fa77",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Vulnerability                f\"str$id\"\"str$id\"\"str$id\"         ...\n",
-       "Category                                             sql_injection\n",
-       "Length                                                           9\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sequences_data.iloc[0,:]"
+    "lines_pad_codebert = padSequences(sequences, 512)\n",
+    "lines_pad_codebert = [arr.tolist() for arr in lines_pad_codebert]\n",
+    "lines_pad_codebert = np.array(linelines_pad_codeberts_pad)"
    ]
   },
   {
@@ -1493,7 +1479,7 @@
     }
    ],
    "source": [
-    "runDLCrossVal_binary(sequences_data[\"codebert\"].values, sequences_data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
+    "runDLCrossVal_binary(lines_pad_codebert, sequences_data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
    ]
   },
   {
@@ -2113,17 +2099,7 @@
     }
    ],
    "source": [
-    "runDLCrossVal_multi(sequences_data[\"codebert\"].values, sequences_data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b22ae70b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#codebert issue"
+    "runDLCrossVal_multi(lines_pad_codebert, sequences_data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
    ]
   }
  ],
