Fix important issue with output layer size in case of multi-class

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -55,7 +55,6 @@
     "from tensorflow.python.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.python.keras.preprocessing.sequence import pad_sequences\n",
     "from collections import OrderedDict\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
     "from tensorflow.keras.layers import Conv1D\n",
     "from tensorflow.keras.layers import MaxPooling1D, GlobalMaxPool1D\n",
     "import tensorflow.keras.backend as K\n",
@@ -681,6 +680,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a984169f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_categories = len(label_frequencies) # 7\n",
+    "n_categories"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0984d18f",
    "metadata": {},
@@ -810,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "a6b99ea5",
    "metadata": {},
    "outputs": [
@@ -834,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "e409c7e0",
    "metadata": {},
    "outputs": [
@@ -858,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "e9c734b8",
    "metadata": {},
    "outputs": [],
@@ -869,8 +890,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c6bb577b",
+   "execution_count": 21,
+   "id": "3fd51b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,16 +900,6 @@
     "    lines_pad_bert.append(seq[0])\n",
     "    \n",
     "lines_pad_bert = pad_sequences(lines_pad_bert, padding = 'post', maxlen = 512)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fae3e724",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines_pad_bert"
    ]
   },
   {
@@ -1033,7 +1044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buildLstm(max_len, top_words, dim, seed, embedding_matrix, multi):\n",
+    "def buildLstm(max_len, top_words, dim, seed, embedding_matrix, multi, n_outputs):\n",
     "    model=Sequential()\n",
     "    #model.add(Embedding(input_dim=top_words+1, output_dim=dim, input_length=None, mask_zero=True))\n",
     "    model.add(Embedding(input_dim=top_words, output_dim=dim, input_length=None, weights=[embedding_matrix], mask_zero=True, trainable=False))\n",
@@ -1045,10 +1056,10 @@
     "    model.add(Activation('relu')) #dropout=0.2, recurrent_dropout=0.2, kernel_constraint=max_norm(3), bias_constraint=max_norm(3)\n",
     "    model.add(BatchNormalization(momentum=0.0))\n",
     "    if multi == False:\n",
-    "        model.add(Dense(1,activation='sigmoid'))\n",
+    "        model.add(Dense(n_outputs, activation='sigmoid'))\n",
     "        model.compile(loss='binary_crossentropy', optimizer='adam')  \n",
     "    else: \n",
-    "        model.add(Dense(1,activation='softmax'))\n",
+    "        model.add(Dense(n_outputs, activation='softmax'))\n",
     "        model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')\n",
     "    return model"
    ]
@@ -1068,7 +1079,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buildCnn(max_len, top_words, dim, seed, embedding_matrix, multi):\n",
+    "def buildCnn(max_len, top_words, dim, seed, embedding_matrix, multi, n_outputs):\n",
     "    cnn_model = Sequential()\n",
     "    cnn_model.add(Embedding(top_words, dim, input_length=None, weights=[embedding_matrix], mask_zero=True, trainable=False))\n",
     "    cnn_model.add(Conv1D(filters = 128, kernel_size = 1, activation = 'relu'))\n",
@@ -1079,10 +1090,10 @@
     "    cnn_model.add(GlobalMaxPool1D())\n",
     "    #cnn_model.add(Dense(units = 128, activation = 'relu'))\n",
     "    if multi == False:\n",
-    "        cnn_model.add(Dense(units = 1, activation = 'sigmoid'))\n",
+    "        cnn_model.add(Dense(n_outputs, activation = 'sigmoid'))\n",
     "        cnn_model.compile(loss = \"binary_crossentropy\", optimizer = \"adam\")\n",
     "    else: \n",
-    "        model.add(Dense(1,activation='softmax'))\n",
+    "        model.add(Dense(n_outputs, activation='softmax'))\n",
     "        model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')\n",
     "    return cnn_model"
    ]
@@ -1373,9 +1384,9 @@
     "#         Y_train=pd.DataFrame(Y_train)\n",
     "        \n",
     "        if userModel == \"cnn\":\n",
-    "            myModel = buildCnn(max_len, num_words, dim, seed, embedding_matrix, False) \n",
+    "            myModel = buildCnn(max_len, num_words, dim, seed, embedding_matrix, False, 1) \n",
     "        elif userModel == \"lstm\":\n",
-    "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, False)\n",
+    "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, False, 1)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
     "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
@@ -1952,9 +1963,9 @@
     "#         Y_train=pd.DataFrame(Y_train)\n",
     "        \n",
     "        if userModel == \"cnn\":\n",
-    "            myModel = buildCnn(max_len, num_words, dim, seed, embedding_matrix, False) \n",
+    "            myModel = buildCnn(max_len, num_words, dim, seed, embedding_matrix, False, n_categories) \n",
     "        elif userModel == \"lstm\":\n",
-    "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, False)\n",
+    "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, False, n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
     "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
