--- a/finetuning_category_prediction.ipynb
+++ b/finetuning_category_prediction.ipynb
@@ -519,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_categories = 7"
+    "n_categories = len(label_frequencies) # 7"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
