Update word2vec algorithm

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "id": "24ba3160",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,9 @@
     "\n",
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
-    "import gensim.downloader"
+    "import gensim.downloader\n",
+    "import io\n",
+    "from keras_preprocessing.text import tokenizer_from_json\n"
    ]
   },
   {
@@ -96,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4d117cc2",
+   "id": "3c46e32c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "81b7b65a",
+   "id": "3a6bb405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "568d32b5",
+   "id": "77649c4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f156e790",
+   "id": "bdf67f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,23 +375,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Encode each token using Word2Vec embeddings\n",
-    "def w2vEncoding(model, tokenized_list):\n",
-    "    encoded_list = []\n",
-    "    for sentence_tokens in tokenized_list:\n",
-    "        encoded_sentence = []\n",
-    "        for token in sentence_tokens:\n",
-    "            if token in model:\n",
-    "                encoded_token = model[token]\n",
-    "                encoded_sentence.append(encoded_token)\n",
-    "        encoded_list.append(encoded_sentence)\n",
+    "# # Encode each token using Word2Vec embeddings\n",
+    "# def w2vEncoding(model, tokenized_list):\n",
+    "#     encoded_list = []\n",
+    "#     for sentence_tokens in tokenized_list:\n",
+    "#         encoded_sentence = []\n",
+    "#         for token in sentence_tokens:\n",
+    "#             if token in model:\n",
+    "#                 encoded_token = model[token]\n",
+    "#                 encoded_sentence.append(encoded_token)\n",
+    "#         encoded_list.append(encoded_sentence)\n",
     "    \n",
-    "    return encoded_list"
+    "#     return encoded_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "id": "ae0f0abb",
    "metadata": {},
    "outputs": [],
@@ -397,40 +399,50 @@
     "if embedding_algorithm == \"w2v\" and representation_form == \"sequences\":\n",
     "\n",
     "    w2v_vectors = gensim.downloader.load('word2vec-google-news-300')\n",
+    "    dim = w2v_vectors.vector_size\n",
     "\n",
-    "    data[\"w2v\"] = w2vEncoding(w2v_vectors, tokenized_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "c04d2e05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       [[-0.21679688, 0.13574219, 0.18652344, 0.11376...\n",
-       "1       [[-0.12988281, 0.122558594, -0.140625, 0.00982...\n",
-       "2       [[0.05810547, -0.0001745224, 0.076171875, 0.05...\n",
-       "3       [[0.10449219, 0.30664062, 0.34765625, 0.113769...\n",
-       "4       [[-0.24121094, 0.14941406, -0.09033203, 0.2597...\n",
-       "                              ...                        \n",
-       "4518    [[-0.040771484, -0.16503906, -0.0859375, 0.343...\n",
-       "4519    [[0.0037994385, 0.024658203, 0.011962891, -0.1...\n",
-       "4520    [[0.080078125, -0.09326172, -0.40234375, 0.176...\n",
-       "4521    [[0.14941406, 0.1953125, -0.26953125, 0.045410...\n",
-       "4522    [[-0.23339844, 0.018920898, -0.103027344, 0.19...\n",
-       "Name: w2v, Length: 4523, dtype: object"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[\"w2v\"]"
+    "#     fileEmb = 'w2v_embeddingsIters.txt'\n",
+    "#     w2v_vectors.save_word2vec_format(fileEmb, binary=False)\n",
+    "    \n",
+    "#     embeddings_index = {}\n",
+    "#     f = open(os.path.join('', fileEmb), encoding=\"utf-8\")\n",
+    "#     for line in f:    \n",
+    "#         values = line.split()\n",
+    "#         word = values[0]\n",
+    "#         coefs = np.asarray(values[1:])\n",
+    "#         embeddings_index[word] = coefs   \n",
+    "#     f.close()\n",
+    "    \n",
+    "    \n",
+    "    tokenizer_obj = Tokenizer()   \n",
+    "    tokenizer_obj.fit_on_texts(tokenized_list)\n",
+    "    \n",
+    "    tokenizer_json = tokenizer_obj.to_json()\n",
+    "    tokenizerFile = 'w2v_tokenizer.json'\n",
+    "    with io.open(tokenizerFile, 'w', encoding='utf-8') as f:\n",
+    "        f.write(json.dumps(tokenizer_json, ensure_ascii=False))\n",
+    "        \n",
+    "    with open(tokenizerFile) as f:\n",
+    "        dataTokenizer = json.load(f)\n",
+    "        tokenizer_obj = tokenizer_from_json(dataTokenizer)\n",
+    "        \n",
+    "    sequences = tokenizer_obj.texts_to_sequences(tokenized_list)\n",
+    "    word_index = tokenizer_obj.word_index\n",
+    "    \n",
+    "    lines_pad = pad_sequences(sequences, padding = 'post', maxlen = max_length)\n",
+    "    \n",
+    "    \n",
+    "    num_words = len(word_index) + 1 # +1 for the unknown-zeros\n",
+    "    embedding_matrix = np.zeros((num_words, dim))\n",
+    "    for word, i in word_index.items():\n",
+    "        if i > num_words:\n",
+    "            continue\n",
+    "        #embedding_vector = embeddings_index.get(word)\n",
+    "        embedding_vector = w2v_vectors[word] if word in w2v_vectors else None\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector\n",
+    "            \n",
+    "  "
    ]
   },
   {
@@ -534,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b724d337",
+   "id": "228830a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,10 +938,7 @@
    ],
    "source": [
     "if multi == False and representation_form == \"sequences\":\n",
-    "    if embedding_algorithm == \"w2v\":\n",
-    "        runDLCrossVal_binary(lines_pad, data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")\n",
-    "    else:\n",
-    "        runDLCrossVal_binary(lines_pad, data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
+    "    runDLCrossVal_binary(lines_pad, data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
    ]
   },
   {
@@ -1543,10 +1552,7 @@
    ],
    "source": [
     "if multi == True and representation_form == \"sequences\":\n",
-    "    if embedding_algorithm == \"w2v\":\n",
-    "        runDLCrossVal_multi(lines_pad, data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")\n",
-    "    else:\n",
-    "        runDLCrossVal_multi(lines_pad, data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
+    "    runDLCrossVal_multi(lines_pad, data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
    ]
   }
  ],
