Add a check for max length after tokenization

--- a/finetuning_category_prediction.ipynb
+++ b/finetuning_category_prediction.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "24ba3160",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\iliaskaloup\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import json, os\n",
@@ -130,6 +139,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "eaa5944e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "392"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(sequences_data[\"Length\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8e6040f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum number of words: 392\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_counts = sequences_data[\"Vulnerability\"].apply(lambda x: len(x.split()))\n",
+    "max_length = word_counts.max()\n",
+    "print(\"Maximum number of words:\", max_length)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "baa5a91a",
    "metadata": {},
@@ -139,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "d13eeb05",
    "metadata": {},
    "outputs": [],
@@ -156,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "7ac1d2a8",
    "metadata": {},
    "outputs": [],
@@ -172,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "66c653c5",
    "metadata": {},
    "outputs": [],
@@ -215,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "c64a1d1d",
    "metadata": {},
    "outputs": [],
@@ -232,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "66ffd309",
    "metadata": {},
    "outputs": [],
@@ -242,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "afda43c5",
    "metadata": {},
    "outputs": [],
@@ -254,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "af495c86",
    "metadata": {},
    "outputs": [],
@@ -290,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "a183507d",
    "metadata": {},
    "outputs": [],
@@ -302,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "9b22edec",
    "metadata": {},
    "outputs": [],
@@ -319,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "499ff9ac",
    "metadata": {},
    "outputs": [],
@@ -333,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "8afdf7e3",
    "metadata": {},
    "outputs": [],
@@ -350,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "3540490a",
    "metadata": {},
    "outputs": [],
@@ -366,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "f04aafdd",
    "metadata": {},
    "outputs": [],
@@ -389,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "601b8c41",
    "metadata": {},
    "outputs": [],
@@ -514,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "7b444655",
    "metadata": {},
    "outputs": [],
@@ -524,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "2d1281a6",
    "metadata": {},
    "outputs": [
@@ -611,7 +661,7 @@
        "4               0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,6 +676,35 @@
     "# Update the categories in the DataFrame with their numerical indexes\n",
     "sequences_data[\"Category_Index\"] = sequences_data[\"Category\"].map(category_to_index)\n",
     "sequences_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c0d56181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMaxLen(X):\n",
+    "\n",
+    "    # Code for identifying max length of the data samples after tokenization using transformer tokenizer\n",
+    "    \n",
+    "    max_length = 0\n",
+    "    # Iterate over each sample in your dataset\n",
+    "    for i, input_ids in enumerate(X['input_ids']):\n",
+    "        # Calculate the length of the tokenized sequence for the current sample\n",
+    "        length = tf.math.reduce_sum(tf.cast(input_ids != 1, tf.int32)).numpy()\n",
+    "        # Update max_length and max_row if the current length is greater\n",
+    "        if length > max_length:\n",
+    "            max_length = length\n",
+    "            max_row = i\n",
+    "\n",
+    "    print(\"Max length of tokenized data:\", max_length)\n",
+    "    print(\"Row with max length:\", max_row)\n",
+    "\n",
+    "    #X['input_ids'] = np.delete(X['input_ids'], max_row, axis=0)\n",
+    "    \n",
+    "    return max_length"
    ]
   },
   {
@@ -689,6 +768,8 @@
     "        return_attention_mask=True,\n",
     "        verbose=True\n",
     "    )\n",
+    "\n",
+    "#print(\"Max tokenized length\", getMaxLen(X))\n",
     "\n",
     "scores=['accuracy', 'precision', 'recall', 'f1', 'roc_auc']\n",
     "values = [np.array([]) for i in range(0, len(scores))]\n",
